--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
@@ -1,85 +1,34 @@
 /* index */
 
-nav {
-  width: 100%;
-  height: 100px;
-  background-color: aqua;
-}
-
-.nav-01 {
-  width: 1500px;
-  height: 40px;
-  font-family: "Times New Roman", Times, serif;
-  background-color: blanchedalmond;
-  font-size: 16px;
-  border-radius: 5px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-}
-.nav-01 > li {
-  float: left;
-  margin-right: 49px;
-  margin-top: 8px;
-}
-
-.nav-01 > li > a {
-  text-transform: uppercase;
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-}
-.nav-01 > li > a {
-  text-transform: uppercase;
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-}
-.nav-01 li {
-  position: relative;
-  list-style: none;
-}
-.nav-01 li a {
-  font-weight: bold;
-  padding: 10px;
-  line-height: 5px;
-  display: inline-block;
-  margin-left: 59px;
-}
-.nav-01 .sub-menu {
-  text-align: center;
-  display: none;
-  position: absolute;
-  top: 5px;
-  width: 100px;
-  margin-left: 15px;
-}
-
-.nav-01 li:hover > .sub-menu {
-  display: block;
-  color: rgb(255, 255, 255);
-}
-
-.nav-01 > li > .sub-menu {
-  top: 10px;
-  left: -25px;
-}
-.nav-01 > li > .sub-menu {
-  top: 0px;
-  left: -20px;
-}
-
-.nav-01 a:hover {
-  color: rgb(38, 83, 247);
-}
-
-/* index end */
-
 /* San pham */
-div.gallery {
-  margin: 20px;
-  border: 1px solid rgb(204, 204, 204);
-  float: left;
-  width: 180px;
+.danh-sach-san-pham {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1180px;
+  margin: 0 auto;
+}
+.danh-sach-san-pham .san-pham {
+  flex-basis: calc(100% / 6 - 7.5px);
+  margin-bottom: 15px;
+  padding: 0 7px;
 }
 
+.danh-sach-san-pham .san-pham a {
+  text-decoration: none;
+  color: #000;
+}
+.danh-sach-san-pham .san-pham .hinh-anh {
+  width: 100%;
+  height: 180px;
+}
+.danh-sach-san-pham .san-pham .hinh-anh img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+div.gallery {
+  border: 1px solid rgb(204, 204, 204);
+}
 div.gallery:hover {
   border: 1px solid #777;
 }
@@ -90,7 +39,7 @@ div.gallery img {
 }
 
 div.desc {
-  padding: 15px;
+  padding: 7px;
   text-align: center;
 }
 
@@ -107,7 +56,7 @@ div.desc {
 }
 .thanh_ngang {
   width: 1200px;
-  margin: 20px;
+  margin: auto;
   height: 5px;
   background-color: black;
 }
@@ -141,6 +90,7 @@ img.sticky {
 .sticky {
   width: 700px;
 }
+
 /* giới thiệu */
 html {
   box-sizing: border-box;
@@ -253,3 +203,6 @@ html {
 }
 
 /* menu end */
+.text-center {
+  text-align: center;
+}
