xoa phan du css

--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
@@ -1,4 +1,4 @@
-/* index */
+/* header */
 
 /* San pham */
 .danh-sach-san-pham {
@@ -151,5 +151,3 @@ html {
   background-color: #555;
 }
 /* end */
-
-/* fooder */
