--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/sanpham.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/sanpham.css
@@ -9,8 +9,7 @@ body {
   background-color: #fdf1ec;
 }
 
-.wrapper {
-  height: 460px;
+.wrapper.thong-tin-phong {
   width: 774px;
   margin: 50px auto;
   border-radius: 7px 7px 7px 7px;
@@ -18,22 +17,28 @@ body {
   -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .product-img {
-  float: left;
+  flex-basis: 50%;
+  min-height: 475px;
 }
 
 .product-img img {
   border-radius: 7px 0 0 7px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-
+.mo-ta-phong {
+  padding: 30px 15px;
+}
 .product-info {
-  margin-left: 450px;
-  height: 440px;
-  width: 400px;
-  border-radius: 0 7px 10px 7px;
-  background-color: #ffffff;
+  border-radius: 0;
+  background-color: #e7e7e773;
+  flex-basis: 50%;
 }
 
 .product-text h1 {
