--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
@@ -1,6 +1,3 @@
-/* header */
-
-/* San pham */
 .danh-sach-san-pham {
   display: flex;
   flex-wrap: wrap;
@@ -43,111 +40,10 @@ div.desc {
   text-align: center;
 }
 
-/* San pham end */
-.menu {
-  margin-left: 100px;
-}
-.chu_01 {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 35px;
-}
-.chu_11 {
-  margin-left: 500px;
-}
-.thanh_ngang {
-  width: 1200px;
+.gioi-thieu-ngan {
   margin: auto;
-  height: 5px;
-  background-color: black;
-}
-.gallery:hover {
-  color: rgb(54, 150, 223);
-}
-img.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  width: 200px;
-}
-.gioi_thieu {
-  width: 500px;
-  height: 550px;
-
-  margin-left: 140px;
-}
-.chu_2 {
-  font-size: 19px;
-}
-.gioi_thieu_01 {
-  width: 500px;
-  height: 550px;
-  margin-top: -550px;
-  margin-left: 880px;
-}
-.chu_02 {
-  font-size: 35px;
-}
-.sticky {
-  width: 700px;
 }
 
-/* giới thiệu */
-html {
-  box-sizing: border-box;
+b {
+  color: red;
 }
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-.column {
-  float: left;
-  width: 30%;
-  margin-left: 40px;
-  padding: 0 8px;
-}
-
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after,
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: grey;
-}
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-/* end */
