--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
@@ -47,3 +47,15 @@ div.desc {
 .avt {
   border: 1px solid black;
 }
+
+.sep-2 {
+  border: 1px;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    #f0f0f0,
+    #00b9ff,
+    #59d941,
+    #f0f0f0
+  );
+}
