--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/sanpham.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/sanpham.css
@@ -10,7 +10,7 @@ body {
 }
 
 .wrapper.thong-tin-phong {
-  width: 774px;
+  width: 900px;
   margin: 50px auto;
   border-radius: 7px 7px 7px 7px;
   /* VIA CSS MATIC https://goo.gl/cIbnS */
@@ -104,11 +104,10 @@ span {
   display: inline-block;
   height: 50px;
   width: 176px;
-  margin: 0 40px 0 16px;
+  margin: 150px 0 0px 35px;
   box-sizing: border-box;
   border: transparent;
   border-radius: 60px;
-  font-family: "Raleway", sans-serif;
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
