--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/lienhe.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/lienhe.css
@@ -1,126 +1,248 @@
-.pb-100 {
-    padding-bottom: 100px;
-  }
-  .pt-100 {
-    padding-top: 100px;
-  }
-  .mb-100 {
-    margin-bottom: 100px;
-  }
-  a {
-    text-decoration: none;
-    color: #333;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  .section-title {
-    position: relative;
-  }
-  .section-title p {
-    font-size: 16px;
-    margin-bottom: 5px;
-    font-weight: 400;
-  }
-  .section-title h4 {
-    font-size: 40px;
-    font-weight: 600;
-    text-transform: capitalize;
-    position: relative;
-    padding-bottom: 20px;
-    display: inline-block;
-  }
-  .section-title h4::before {
-    position: absolute;
-    content: "";
-    width: 80px;
-    height: 2px;
-    background-color: #d8d8d8;
-    bottom: 0;
-    left: 50%;
-    margin-left: -40px;
-  }
-  .section-title h4::after {
-    position: absolute;
-    content: "";
-    width: 50px;
-    height: 2px;
-    background-color: #FF7200;
-    left: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -25px;
-  }
-  .contact {
+#contact {
+  width: 100%;
+  height: 100%;
+}
 
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    position: relative;
-    z-index: 2;
-    color: rgb(10, 10, 10);
+.section-header {
+  text-align: center;
+  /* margin: 0 auto; */
+  padding: 40px 0;
+  /* font: 300 60px "Oswald", sans-serif; */
+  color: #9f7537;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+  max-width: 840px;
+}
+
+/* Left contact page */
+.form-horizontal {
+  /*float: left;*/
+  max-width: 400px;
+  font-family: "Lato";
+  font-weight: 400;
+}
+
+.form-control,
+textarea {
+  max-width: 400px;
+  background-color: #000;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.send-button {
+  margin-top: 15px;
+  height: 34px;
+  width: 400px;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.alt-send-button {
+  width: 400px;
+  height: 34px;
+  transition: all 0.2s ease-in-out;
+}
+
+.send-text {
+  display: block;
+  margin-top: 10px;
+  font: 700 12px "Lato", sans-serif;
+  letter-spacing: 2px;
+}
+
+.alt-send-button:hover {
+  transform: translate3d(0px, -29px, 0px);
+}
+
+/* Begin Right Contact Page */
+.direct-contact-container {
+  max-width: 400px;
+}
+
+/* Location, Phone, Email Section */
+.contact-list {
+  list-style-type: none;
+  margin-left: -30px;
+  padding-right: 20px;
+}
+
+.list-item {
+  line-height: 4;
+  color: #aaa;
+}
+
+.contact-text {
+  font: 300 18px "Lato", sans-serif;
+  letter-spacing: 1.9px;
+  color: #bbb;
+}
+
+.place {
+  margin-left: 62px;
+}
+
+.phone {
+  margin-left: 56px;
+}
+
+.gmail {
+  margin-left: 53px;
+}
+
+.contact-text a {
+  color: #bbb;
+  text-decoration: none;
+  transition-duration: 0.2s;
+}
+
+.contact-text a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Social Media Icons */
+.social-media-list {
+  position: relative;
+  font-size: 22px;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.social-media-list li a {
+  color: #fff;
+}
+
+.social-media-list li {
+  position: relative;
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin: 10px 3px;
+  line-height: 60px;
+  border-radius: 50%;
+  color: #fff;
+
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.social-media-list li:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 50%;
+  opacity: 0;
+  box-shadow: 0 0 0 1px #fff;
+  transition: all 0.2s ease-in-out;
+}
+
+.social-media-list li:hover {
+  background-color: #fff;
+}
+
+.social-media-list li:hover:after {
+  opacity: 1;
+  transform: scale(1.12);
+  transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
+}
+
+.social-media-list li:hover a {
+  color: #000;
+}
+
+.copyright {
+  font: 200 14px "Oswald", sans-serif;
+  color: #555;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+hr {
+  border-color: rgba(255, 255, 255, 0.6);
+}
+
+/* Begin Media Queries*/
+@media screen and (max-width: 850px) {
+  .contact-wrapper {
+    display: flex;
+    flex-direction: column;
   }
-  .contact-form input,
+  .direct-contact-container,
+  .form-horizontal {
+    margin: 0 auto;
+  }
+
+  .direct-contact-container {
+    margin-top: 60px;
+    max-width: 300px;
+  }
+  .social-media-list li {
+    height: 60px;
+    width: 60px;
+    line-height: 60px;
+  }
+  .social-media-list li:after {
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+  }
+}
+
+@media screen and (max-width: 569px) {
+  .direct-contact-container,
+  .form-wrapper {
+    float: none;
+    margin: 0 auto;
+  }
+  .form-control,
   textarea {
-    width: 100%;
-    border: 1px solid #555;
-    padding: 5px 10px;
-    text-transform: capitalize;
-    margin-top: 15px;
-    background-color: transparent;
-    color: rgb(4, 3, 3);
+    margin: 0 auto;
   }
-  .contact:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
+
+  .name,
+  .email,
+  textarea {
+    width: 280px;
+  }
+
+  .direct-contact-container {
+    margin-top: 60px;
+    max-width: 280px;
+  }
+  .social-media-list {
     left: 0;
-    top: 0;
-    background-color: rgb(239, 223, 223);
-    z-index: -1;
-    opacity: .85;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)";
   }
-  .single-contact {
-    text-align: left;
-    position: relative;
-    padding-left: 70px;
-    margin-bottom: 50px;
-    margin-top: 10px;
+  .social-media-list li {
+    height: 55px;
+    width: 55px;
+    line-height: 55px;
+    font-size: 2rem;
   }
-  .single-contact i.fa {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-    background-color: #FF7200;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border-radius: 3px;
+  .social-media-list li:after {
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
   }
-  .single-contact h5 {
-    font-size: 18px;
-    margin-bottom: 10px;
-    font-weight: 500;
+}
+
+@media screen and (max-width: 410px) {
+  .send-button {
+    width: 99%;
   }
-  .single-contact p {
-    font-size: 15px;
-    font-weight: 400;
-  }
-  .contact-form input[type="submit"] {
-    background-color: #FF7200;
-    border: 0px;
-    cursor: pointer;
-    font-size: 16px;
-    -webkit-transition: .4s;
-    transition: .4s
-  }
-  .contact-form input[type="submit"]:hover {
-    background-color: #CC5B00
-  }
-  .contact-form input:focus, textarea:focus {
-    border-color: #CC5B00
-  }
+}
