client - update giao diện

--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/sanpham.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/sanpham.css
@@ -42,15 +42,10 @@ body {
 }
 
 .product-text h1 {
-  margin: 0 0 0 38px;
-  padding-top: 52px;
+  margin: 0 0 0 40px;
+  padding-top: 10px;
 
   color: #474747;
-}
-
-.product-text h1,
-.product-price-btn p {
-  font-family: "Bentham", serif;
 }
 
 .product-text h2 {
@@ -83,37 +78,38 @@ body {
 
 .product-price-btn p {
   display: inline-block;
-  position: absolute;
+  /* position: absolute; */
   top: -13px;
-  height: 50px;
-  font-family: "Trocchi", serif;
-  margin: 0 0 0 38px;
-  font-size: 28px;
-  font-weight: lighter;
-  color: #474747;
+  /* height: 50px; */
+  /* font-family: "Trocchi", serif; */
+  margin: 0 0 0 45px;
+  /* font-size: 28px; */
+  /* font-weight: lighter; */
+  color: #343a40;
 }
 
 span {
   display: inline-block;
-  height: 50px;
-  font-family: "Suranna", serif;
+  height: 160px;
+  /* font-family: "Suranna", serif; */
   font-size: 25px;
 }
 
 .product-price-btn button {
   display: inline-block;
+  display: inline-block;
   height: 50px;
-  width: 176px;
-  margin: 150px 0 0px 35px;
+  width: 100%;
+  margin: 100px 0 0px 45px;
   box-sizing: border-box;
   border: transparent;
   border-radius: 60px;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  color: #ffffff;
-  background-color: #9cebd5;
+  color: #ffc107;
+  background-color: #343a40;
   cursor: pointer;
   outline: none;
 }
