--- a/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
+++ b/ASM2_nhom4_DU_AN1/asset/dlient/CSS/index.css
@@ -27,12 +27,12 @@
   height: 100%;
   object-fit: cover;
 }
-div.gallery {
+/* div.gallery {
   border: 1px solid rgb(204, 204, 204);
-}
-div.gallery:hover {
+} */
+/* div.gallery:hover {
   border: 1px solid #777;
-}
+} */
 
 div.gallery img {
   width: 100%;
@@ -52,19 +52,57 @@ div.desc {
   border: 1px solid black;
 }
 
-.sep-2 {
-  max-width: 1180px;
-  border: 1px;
-  height: 1px;
+.tieu-de {
+  text-align: left;
+  height: 35px;
+  text-transform: uppercase;
+  margin: 15px 0 30px 0;
+  padding: 2px;
+  border-radius: 5px 50px 5px 30px;
   background-image: linear-gradient(
     to right,
-    #f0f0f0,
-    #00b9ff,
-    #59d941,
+    #dbd04f,
+    #dff63ead,
+    rgb(227 230 173),
     #f0f0f0
   );
 }
+.tieu-de b {
+  margin-left: 15px;
+  font-size: 20px;
+}
+.so-luoc {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1180px;
+  margin: 0 auto;
+}
+.so-luoc .so-luoc-noi-dung {
+  flex-basis: calc(100% / 3 - 7.5px);
+  margin-bottom: 15px;
+  padding: 0 7px;
+}
 
-.tieu-de {
-  text-transform: uppercase;
+.so-luoc .so-luoc-noi-dung .hinh-anh {
+  width: 100%;
+  height: 500px;
+}
+.so-luoc .so-luoc-noi-dung .hinh-anh img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.so-luoc .so-luoc-noi-dung .chi-tiet-noi-dung {
+  margin-top: 30px;
+}
+
+.sap-ra-mat {
+  width: 500px;
+  margin-bottom: 10px;
+}
+.sap-ra-mat img {
+  width: 400px;
+  display: flex;
+  margin: auto;
 }
